--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "framer-motion": "^10.12.21",
     "nodemailer": "^6.9.4",
     "react": "^18.2.0",
+    "react-animated-cursor": "^2.7.0",
     "react-card-flip": "^1.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
