--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "feather-icons-react": "^0.7.0",
     "framer-motion": "^10.12.21",
     "nodemailer": "^6.9.4",
     "react": "^18.2.0",
@@ -22,7 +23,8 @@
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.1",
     "react-scroll": "^1.8.9",
-    "react-simple-typewriter": "^5.0.1"
+    "react-simple-typewriter": "^5.0.1",
+    "react-tooltip": "^5.28.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
@@ -34,8 +36,8 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.1",
     "postcss": "^8.4.26",
+    "serve": "^14.2.4",
     "tailwindcss": "^3.3.3",
-    "vite": "^4.4.4",
-    "serve": "^12.0.2"
+    "vite": "^4.4.4"
   }
 }
