--- a/package.json
+++ b/package.json
@@ -17,14 +17,12 @@
     "framer-motion": "^10.12.21",
     "nodemailer": "^6.9.4",
     "react": "^18.2.0",
-    "react-animated-cursor": "^2.7.0",
     "react-card-flip": "^1.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.1",
     "react-scroll": "^1.8.9",
-    "react-simple-typewriter": "^5.0.1",
-    "react-tooltip": "^5.28.0"
+    "react-simple-typewriter": "^5.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
