--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-spring/konva": "^9.7.5",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "feather-icons-react": "^0.7.0",
     "framer-motion": "^10.12.21",
+    "konva": "^9.3.16",
     "nodemailer": "^6.9.4",
     "react": "^18.2.0",
     "react-card-flip": "^1.2.0",
